fix(css) scrollbars and focus states

--- a/css/index.css
+++ b/css/index.css
@@ -129,6 +129,10 @@ a.disabled:hover {
   background-color: var(--color-primary);
 }
 
+.primary-button:focus {
+  box-shadow: 0 0 0 2px white, 0 0 0 4px var(--color-primary--tint-alt);
+}
+
 .secondary-button:hover,
 .secondary-button:focus {
   background-color: var(--color-primary--tint);
@@ -202,14 +206,14 @@ input[type=checkbox], input[type=radio] {
 
 .form textarea:focus, .form input:not([type="radio"]):focus {
   outline: 0;
-  box-shadow: 0 0 0 1px var(--color-primary--light);
-  border-radius: 2px;
+  box-shadow: 0 0 0 2px var(--color-primary--tint-alt);
+  border-radius: var(--border-radius);
 }
 
 .new_doc_container input[type='text'] {
   height: 32px;
   font-size: var(--font-small);
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   border: 1px solid var(--color-border);
   padding-left: 8px;
   width: 100%;
@@ -225,7 +229,7 @@ input[type=checkbox], input[type=radio] {
 .authBtn {
   height: 36px;
   background-color: #2B5DD0;
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   display: inline-block;
   font-size: var(--font-small);
   font-weight: 600;
@@ -304,8 +308,6 @@ img.logo {
 
 .divider {
   border-top: 1px solid var(--color-border);
-  clear: both;
-  position: relative;
 }
 
 .card {
@@ -346,7 +348,6 @@ img.logo {
 }
 
 .note {
-  width: 3in;
   height: 3in;
   padding: 0px;
   margin: 0px;
@@ -361,8 +362,7 @@ img.logo {
 .shadow::after {
   display: block;
   background-image: url(img/shadow_small.png);
-  background-size: 3in;
-  width: 3in;
+  background-size: 100%;
   height: 20px;
   background-repeat: no-repeat;
   content: "";
@@ -382,7 +382,7 @@ img.logo {
   background-color: var(--color-background--inverse);
   color: var(--color-text--inverse);
   margin: auto;
-  border-radius: 4px;
+  border-radius: var(--border-radius);
   letter-spacing: 1px;
   font-variant-ligatures: none;
   text-align: center;
@@ -510,6 +510,10 @@ img.logo {
   margin-bottom: var(--space-small);
 }
 
+.m-right--xsmall {
+  margin-right: var(--space-xsmall);
+}
+
 .m-large {
   margin: var(--space-large);
 }
@@ -577,59 +581,41 @@ fieldset {
 .scrollable-y {
   overflow-x: hidden;
   overflow-y: auto;
-  border-right: 5px solid var(--color-background);
 }
 
 .scrollable-y::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-.scrollable-y::-webkit-scrollbar:hover {
-  width: 12px;
-  height: 12px;
-}
-
-.scrollable-y scrollbar-corner {
-  display: none;
+  width: 16px;
+  height: 16px;
+  overflow: visible;
 }
 
 .scrollable-y::-webkit-scrollbar-track {
-  border-right: 5px solid transparent;
+  background-color: transparent;
   background-clip: padding-box;
-  background-color: white;
-  border: 5px solid white;
-}
-
-.scrollable-y::-webkit-scrollbar-track:vertical {
-  width: 6px;
-}
-
-.scrollable-x::-webkit-scrollbar-track:horizontal {
-  height: 6px;
+  box-shadow: none;
 }
 
 .scrollable-y::-webkit-scrollbar-thumb {
-  -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
-  background: #ccc;
+  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.015);
+  background-color: rgba(0,0,0,.2);
   background-clip: padding-box;
-  border-radius: 3px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  min-height: 28px;
 }
 
-.scrollable-y::-webkit-scrollbar-track:hover {
+.scrollable-y::-webkit-scrollbar-track:vertical:hover {
   background-color: rgba(0, 0, 0, 0.035);
-  -webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.14), inset -1px -1px 0 rgba(0, 0, 0, 0.07);
-  width: 12px;
-  height: 12px;
+  -webkit-box-shadow: inset 1px 0px 0 rgba(0, 0, 0, 0.07), inset -1px 0px 0 rgba(0, 0, 0, 0.07);
 }
 
 .scrollable-y::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .scrollable-y::-webkit-scrollbar-track:active {
   background-color: rgba(0, 0, 0, 0.035);
-  -webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.14), inset -1px -1px 0 rgba(0, 0, 0, 0.07);
+  -webkit-box-shadow: inset 1px 1px 0 rgba(0, 0, 0, 0.07), inset -1px -1px 0 rgba(0, 0, 0, 0.07);
 }
 
 .scrollable-y::-webkit-scrollbar-thumb:active {
